tests/golden/type_errors/array_assign_non_number_index.cd
let xs = [1];
xs["0"] = 2;
